# StyleTransfer-CPP

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  download_torch.sh
include/: ImageLoader.h  MultiscaleStyleTransfer.h  StyleTransfer.h  TextureModel.h
results/: textures.html
src/: CMakeLists.txt  main.cpp
src/CLI/: CMakeLists.txt  main.cpp
src/GUI/: CMakeLists.txt  main.cpp
src/TextureNetwork/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  StyleTransfer.cpp
tools/imageManipulation/: CPPImageLoader.cpp  CPPImageLoader.py
tools/modelExporter/: CPPImageLoader.cpp  CPPImageLoader.py  python2CPP.cpp  python2CPP.py
